dolly-webapp/src/main/dolly-web/src/components/fields/StaticValue/StaticValue.less
.static-value {
	flex: 0 0 160px;
	padding-right: 10px;
}

.static-value {
	&_x-small {
		flex: 0 0 80px;
	}

	&_small {
		flex: 0 0 160px;
	}

	&_medium {
		flex: 0 0 320px;
	}

	&_xlarge {
		flex: 0 0 480px;
	}
}

.static-value-headers {
	h2,
	h3,
	h4 {
		font-size: 0.75em;
		margin: 0 0 5px;
		font-weight: bold;
		text-transform: uppercase;
	}
}

